--- a/pipelines/pipeline-jet-api/pom.xml
+++ b/pipelines/pipeline-jet-api/pom.xml
@@ -34,9 +34,31 @@
          <artifactId>feign-reactor-spring-configuration</artifactId>
       </dependency>
       <dependency>
+         <groupId>io.projectreactor</groupId>
+         <artifactId>reactor-core</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.kafka</groupId>
+         <artifactId>kafka-clients</artifactId>
+         <version>${kafka.version}</version>
+      </dependency>
+      <dependency>
          <groupId>io.vyne</groupId>
-         <artifactId>pipelines-api</artifactId>
+         <artifactId>vyne-core-types</artifactId>
          <version>${project.version}</version>
+      </dependency>
+
+      <dependency>
+         <groupId>com.mercateo</groupId>
+         <artifactId>test-clock</artifactId>
+         <version>1.0.2</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.assertj</groupId>
+         <artifactId>assertj-core</artifactId>
+         <version>3.20.2</version>
+         <scope>test</scope>
       </dependency>
    </dependencies>
 
