tidy up java versions

--- a/cask/pom.xml
+++ b/cask/pom.xml
@@ -273,7 +273,7 @@
                         <plugin>no-arg</plugin>
                     </compilerPlugins>
 
-                    <jvmTarget>1.8</jvmTarget>
+                    <jvmTarget>${kotlin.compiler.jvmTarget}</jvmTarget>
                 </configuration>
 
                 <dependencies>
@@ -288,15 +288,6 @@
                         <version>${kotlin.version}</version>
                     </dependency>
                 </dependencies>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.3</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
             </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
