--- a/pipelines/pipeline-jet-api/pom.xml
+++ b/pipelines/pipeline-jet-api/pom.xml
@@ -12,9 +12,9 @@
    <artifactId>pipeline-jet-api</artifactId>
 
    <properties>
-      <maven.compiler.source>11</maven.compiler.source>
-      <maven.compiler.target>11</maven.compiler.target>
-      <kotlin.compiler.jvmTarget>11</kotlin.compiler.jvmTarget>
+<!--      <maven.compiler.source>11</maven.compiler.source>-->
+<!--      <maven.compiler.target>11</maven.compiler.target>-->
+<!--      <kotlin.compiler.jvmTarget>11</kotlin.compiler.jvmTarget>-->
    </properties>
 
    <dependencies>
