--- a/pipelines/pipeline-jet/pom.xml
+++ b/pipelines/pipeline-jet/pom.xml
@@ -12,9 +12,9 @@
    <artifactId>pipeline-jet</artifactId>
 
    <properties>
-      <maven.compiler.source>11</maven.compiler.source>
-      <maven.compiler.target>11</maven.compiler.target>
-      <kotlin.compiler.jvmTarget>11</kotlin.compiler.jvmTarget>
+<!--      <maven.compiler.source>11</maven.compiler.source>-->
+<!--      <maven.compiler.target>11</maven.compiler.target>-->
+<!--      <kotlin.compiler.jvmTarget>11</kotlin.compiler.jvmTarget>-->
       <hazelcast-jet.version>4.5</hazelcast-jet.version>
       <hazelcast.version>4.2</hazelcast.version>
    </properties>
