--- a/pipelines/pipeline-jet-api/pom.xml
+++ b/pipelines/pipeline-jet-api/pom.xml
@@ -12,9 +12,10 @@
    <artifactId>pipeline-jet-api</artifactId>
 
    <properties>
-<!--      <maven.compiler.source>11</maven.compiler.source>-->
-<!--      <maven.compiler.target>11</maven.compiler.target>-->
-<!--      <kotlin.compiler.jvmTarget>11</kotlin.compiler.jvmTarget>-->
+      <!-- Pipelines use Java 11, as we use  CompletableFuture.failedFuture(...) -->
+      <maven.compiler.source>11</maven.compiler.source>
+      <maven.compiler.target>11</maven.compiler.target>
+      <kotlin.compiler.jvmTarget>11</kotlin.compiler.jvmTarget>
    </properties>
 
    <dependencies>
