--- a/pipelines/pipeline-jet/pom.xml
+++ b/pipelines/pipeline-jet/pom.xml
@@ -12,9 +12,10 @@
    <artifactId>pipeline-jet</artifactId>
 
    <properties>
-<!--      <maven.compiler.source>11</maven.compiler.source>-->
-<!--      <maven.compiler.target>11</maven.compiler.target>-->
-<!--      <kotlin.compiler.jvmTarget>11</kotlin.compiler.jvmTarget>-->
+      <!-- Pipelines use Java 11, as we use  CompletableFuture.failedFuture(...) -->
+      <maven.compiler.source>11</maven.compiler.source>
+      <maven.compiler.target>11</maven.compiler.target>
+      <kotlin.compiler.jvmTarget>11</kotlin.compiler.jvmTarget>
       <hazelcast-jet.version>4.5</hazelcast-jet.version>
       <hazelcast.version>4.2</hazelcast.version>
    </properties>
@@ -169,5 +170,59 @@
 
 
    </dependencies>
+   <build>
+      <finalName>${project.artifactId}</finalName>
+      <plugins>
+         <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <executions>
+               <execution>
+                  <goals>
+                     <goal>build-info</goal>
+                  </goals>
+               </execution>
+            </executions>
+         </plugin>
+         <plugin>
+            <groupId>io.fabric8</groupId>
+            <artifactId>docker-maven-plugin</artifactId>
+
+            <configuration>
+               <images>
+                  <image>
+                     <name>vyneco/pipeline:${project.version}</name>
+                     <build>
+                        <dockerFile>${project.basedir}/Dockerfile</dockerFile>
+                        <tags>
+                           <!--suppress UnresolvedMavenProperty -->
+                           <tag>${docker.tag.latest}</tag>
+                           <!--suppress UnresolvedMavenProperty -->
+                           <tag>${docker.tag.numbered}</tag>
+                        </tags>
+                     </build>
+                  </image>
+               </images>
+            </configuration>
+
+            <!-- Connect start/stop to pre- and
+                 post-integration-test phase, respectively if you want to start
+                 your docker containers during integration tests -->
+            <executions>
+               <execution>
+                  <id>deploy</id>
+                  <phase>deploy</phase>
+                  <goals>
+                     <!-- "build" should be used to create the images with the
+                          artifact -->
+                     <goal>build</goal>
+                     <goal>push</goal>
+                  </goals>
+               </execution>
+            </executions>
+         </plugin>
+
+      </plugins>
+   </build>
 
 </project>
