--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
 
    <properties>
-      <taxi.version>1.30.6</taxi.version>
+      <taxi.version>1.31.0-SNAPSHOT</taxi.version>
 
       <!-- Used in QueryService -->
       <elasticsearch.version>7.5.2</elasticsearch.version>
@@ -51,7 +51,6 @@
       <module>schema-store</module>
       <module>schema-store-client</module>
       <module>schema-store-api</module>
-      <module>vyne-spring-schemaStore</module>
       <module>vyne-query-service</module>
       <module>vyne-client</module>
       <module>vyne-query-api</module>
@@ -67,6 +66,7 @@
       <module>spring-boot-admin</module>
        <module>vyne-history-core</module>
        <module>connectors</module>
+      <module>schema-server-api</module>
    </modules>
 
    <scm>
