--- a/pipelines/pipeline-jet/Dockerfile
+++ b/pipelines/pipeline-jet/Dockerfile
@@ -1,7 +1,7 @@
 FROM adoptopenjdk/openjdk11:alpine-jre
 
-COPY target/vyne-query-service.jar /opt/service/
+COPY target/pipeline-jet.jar /opt/service/
 
 WORKDIR /opt/service/
 
-CMD $BEFORE_START_COMMAND && java $JVM_OPTS -jar -Dspring.profiles.active=${PROFILE} vyne-query-service.jar $OPTIONS
+CMD $BEFORE_START_COMMAND && java $JVM_OPTS -jar -Dspring.profiles.active=${PROFILE} pipeline-jet.jar $OPTIONS
