--- a/pipelines/pipelines-api/pom.xml
+++ b/pipelines/pipelines-api/pom.xml
@@ -5,7 +5,7 @@
    <parent>
       <artifactId>pipelines</artifactId>
       <groupId>io.vyne</groupId>
-      <version>0.19.2-SNAPSHOT</version>
+      <version>0.19.2</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
