--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
    <groupId>io.vyne</groupId>
    <artifactId>platform</artifactId>
    <packaging>pom</packaging>
-   <version>0.19.2-SNAPSHOT</version>
+   <version>0.19.2</version>
 
    <parent>
       <groupId>org.springframework.boot</groupId>
