--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -5,7 +5,7 @@
    <parent>
       <artifactId>platform</artifactId>
       <groupId>io.vyne</groupId>
-      <version>0.18.10-SNAPSHOT</version>
+      <version>0.18.10</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
