--- a/connectors/kafka-connector/pom.xml
+++ b/connectors/kafka-connector/pom.xml
@@ -151,7 +151,7 @@
 
       <dependency>
          <groupId>org.testcontainers</groupId>
-         <artifactId>postgresql</artifactId>
+         <artifactId>kafka</artifactId>
          <version>1.15.1</version>
          <scope>test</scope>
       </dependency>
