add min/max fuctions, fix csv parsing and persistence for Nyaya demo

--- a/vyne-query-service/src/main/resources/application.yml
+++ b/vyne-query-service/src/main/resources/application.yml
@@ -117,6 +117,7 @@ logging:
       io.vyne: INFO
 #       Enable this to get graph debug schemas:
 #      io.vyne.query.GraphSearcher: TRACE
+      io.vyne.query: DEBUG
       org.apache.catalina: WARN
 eureka:
    client:
