--- a/connectors/jdbc-connector/pom.xml
+++ b/connectors/jdbc-connector/pom.xml
@@ -104,6 +104,21 @@
          <artifactId>postgresql</artifactId>
       </dependency>
 
+      <dependency>
+         <groupId>net.snowflake</groupId>
+         <artifactId>snowflake-jdbc</artifactId>
+         <version>3.13.8</version>
+      </dependency>
+      <dependency>
+         <groupId>com.amazon.redshift</groupId>
+         <artifactId>redshift-jdbc42</artifactId>
+         <version>2.1.0.1</version>
+      </dependency>
+      <dependency>
+         <groupId>mysql</groupId>
+         <artifactId>mysql-connector-java</artifactId>
+         <version>8.0.26</version>
+      </dependency>
 
       <dependency>
          <groupId>org.testcontainers</groupId>
