--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -286,6 +286,13 @@
       </dependency>
       <dependency>
          <groupId>io.vyne</groupId>
+         <artifactId>vyne</artifactId>
+         <version>${project.version}</version>
+         <scope>test</scope>
+         <type>test-jar</type>
+      </dependency>
+      <dependency>
+         <groupId>io.vyne</groupId>
          <artifactId>vyne-spring</artifactId>
          <version>${project.version}</version>
          <type>test-jar</type>
