--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -40,6 +40,7 @@
     "@types/angular": "^1.7.0",
     "ag-grid-angular": "^23.2.1",
     "ag-grid-community": "^23.2.1",
+    "angular-google-charts": "2.0.0",
     "angular-oauth2-oidc": "^10.0.3",
     "angular-split": "^4.0.0",
     "b64-to-blob": "^1.2.19",
