--- a/vyne-query-service/src/test/resources/application-test.yml
+++ b/vyne-query-service/src/test/resources/application-test.yml
@@ -1,7 +1,7 @@
 spring:
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: create-drop
 
   datasource:
     url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;CASE_INSENSITIVE_IDENTIFIERS=TRUE
