--- a/cask-api/pom.xml
+++ b/cask-api/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>platform</artifactId>
         <groupId>io.vyne</groupId>
-       <version>0.18.11-SNAPSHOT</version>
+       <version>0.18.11</version>
     </parent>
     <packaging>jar</packaging>
     <modelVersion>4.0.0</modelVersion>
