logging changes: include date, add highlighting, remove spring banner

--- a/cask/src/main/resources/application.yml
+++ b/cask/src/main/resources/application.yml
@@ -13,6 +13,7 @@ spring.datasource:
 
 spring:
    main:
+      banner-mode: off
       web-application-type: reactive
    application:
       name: cask
