--- a/pipelines/pipeline-jet/src/main/resources/application.yml
+++ b/pipelines/pipeline-jet/src/main/resources/application.yml
@@ -3,6 +3,7 @@ spring:
       name: pipeline-jet-runner
    main:
       web-application-type: reactive
+      banner-mode: off
    codec:
       max-in-memory-size: 100MB
 
