--- a/vyne-query-service/src/main/resources/application.yml
+++ b/vyne-query-service/src/main/resources/application.yml
@@ -15,6 +15,7 @@ spring:
       async:
          request-timeout: 18000000
    main:
+      banner-mode: off
       web-application-type: reactive
    codec:
       max-in-memory-size: 100MB
