--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -17,26 +17,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.9",
-    "@angular/cdk": "^7.3.5",
-    "@angular/common": "^8.2.9",
-    "@angular/compiler": "^8.2.9",
-    "@angular/core": "^8.2.9",
-    "@angular/forms": "^8.2.9",
-    "@angular/http": "^7.2.16",
-    "@angular/material": "^7.3.5",
-    "@angular/platform-browser": "^8.2.9",
-    "@angular/platform-browser-dynamic": "^8.2.9",
-    "@angular/platform-server": "^8.2.9",
-    "@angular/router": "^8.2.9",
-    "@covalent/core": "^2.1.1",
-    "@covalent/dynamic-forms": "^2.1.1",
-    "@covalent/highlight": "^2.1.1",
+    "@angular/animations": "^9.1.13",
+    "@angular/cdk": "^9.2.4",
+    "@angular/common": "^9.1.13",
+    "@angular/compiler": "^9.1.13",
+    "@angular/core": "^9.1.13",
+    "@angular/forms": "^9.1.13",
+    "@angular/material": "^9.2.4",
+    "@angular/platform-browser": "^9.1.13",
+    "@angular/platform-browser-dynamic": "^9.1.13",
+    "@angular/platform-server": "^9.1.13",
+    "@angular/router": "^9.1.13",
+    "@covalent/core": "^3.1.1",
+    "@covalent/dynamic-forms": "^3.1.1",
+    "@covalent/highlight": "^3.1.1",
     "@materia-ui/ngx-monaco-editor": "^2.0.7",
     "@ng-bootstrap/ng-bootstrap": "^5.3.0",
     "@ng-select/ng-select": "^3.7.3",
     "@stomp/ng2-stompjs": "^7.2.0",
-    "@swimlane/ngx-graph": "^6.2.0",
+    "@swimlane/ngx-graph": "^7.1.2",
     "@types/angular": "^1.7.0",
     "ag-grid-angular": "^23.2.1",
     "ag-grid-community": "^23.2.1",
@@ -56,7 +55,7 @@
     "monaco-editor": "^0.22.3",
     "monaco-languageclient": "^0.13.0",
     "nanoid": "^3.1.22",
-    "ngx-file-drop": "^6.0.1",
+    "ngx-file-drop": "^9.0.1",
     "ngx-highlightjs": "4.0.2",
     "ngx-markdown": "^8.2.2",
     "ngx-moment": "^3.4.0",
@@ -68,17 +67,17 @@
     "rich-markdown-editor": "^9.11.2",
     "rxjs": "^6.5.0",
     "stream": "0.0.2",
-    "tslib": "^1.9.0",
+    "tslib": "^1.10.0",
     "url-parse": "^1.4.4",
     "vscode-ws-jsonrpc": "^0.2.0",
-    "zone.js": "^0.9.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "8.4.1",
-    "@angular-devkit/build-angular": "^0.800.0",
-    "@angular/cli": "^8.3.0",
-    "@angular/compiler-cli": "^8.2.9",
-    "@angular/language-service": "^8.0.0",
+    "@angular-devkit/build-angular": "~0.901.15",
+    "@angular/cli": "^9.1.15",
+    "@angular/compiler-cli": "^9.1.13",
+    "@angular/language-service": "^9.1.13",
     "@babel/core": "^7.7.7",
     "@codingame/monaco-jsonrpc": "^0.3.1",
     "@storybook/addon-actions": "^5.3.14",
@@ -89,12 +88,12 @@
     "@testing-library/cypress": "^7.0.6",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^12.11.1",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/react-select": "^3.0.10",
     "babel-loader": "^8.0.6",
-    "codelyzer": "~4.2.1",
+    "codelyzer": "^5.1.2",
     "cypress": "^8.2.0",
     "cypress-file-upload": "^5.0.8",
     "jasmine-core": "~2.99.1",
@@ -108,10 +107,8 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~3.4.5",
+    "typescript": "~3.8.3",
     "webpack-bundle-analyzer": "^3.8.0"
   },
-  "peerDependencies": {
-    "typescript": "~3.4.5"
-  }
+  "peerDependencies": {}
 }
