--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -52,8 +52,9 @@
     "install": "^0.13.0",
     "mermaid": "^8.0.0-rc.8",
     "moment": "^2.24.0",
-    "monaco-editor": "^0.22.3",
-    "monaco-languageclient": "^0.13.0",
+    "monaco-editor": "^0.30.1",
+    "monaco-editor-core": "^0.30.1",
+    "@codingame/monaco-languageclient": "^0.17.0",
     "nanoid": "^3.1.22",
     "ngx-file-drop": "^10.1.1",
     "ngx-highlightjs": "4.1.0",
@@ -69,7 +70,9 @@
     "stream": "0.0.2",
     "tslib": "^2.0.0",
     "url-parse": "^1.4.4",
-    "vscode-ws-jsonrpc": "^0.2.0",
+    "vscode-jsonrpc": "^6.0.0",
+    "vscode-json-languageservice": "^4.1.9",
+    "vscode-languageserver": "7.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -103,7 +106,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "node-sass": "4.13.0",
+    "node-sass": "^6.0.1",
     "protractor": "~7.0.0",
     "ts-node": "~5.0.1",
     "tslint": "~6.1.0",
