--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -17,25 +17,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.2.5",
+    "@angular/animations": "^11.2.14",
     "@angular/cdk": "^10.2.7",
-    "@angular/common": "^10.2.5",
-    "@angular/compiler": "^10.2.5",
-    "@angular/core": "^10.2.5",
-    "@angular/forms": "^10.2.5",
+    "@angular/common": "^11.2.14",
+    "@angular/compiler": "^11.2.14",
+    "@angular/core": "^11.2.14",
+    "@angular/forms": "^11.2.14",
     "@angular/material": "^10.2.7",
-    "@angular/platform-browser": "^10.2.5",
-    "@angular/platform-browser-dynamic": "^10.2.5",
-    "@angular/platform-server": "^10.2.5",
-    "@angular/router": "^10.2.5",
+    "@angular/platform-browser": "^11.2.14",
+    "@angular/platform-browser-dynamic": "^11.2.14",
+    "@angular/platform-server": "^11.2.14",
+    "@angular/router": "^11.2.14",
     "@covalent/core": "^3.1.1",
     "@covalent/dynamic-forms": "^3.1.1",
     "@covalent/highlight": "^3.1.1",
     "@materia-ui/ngx-monaco-editor": "^5.1.0",
     "@ng-bootstrap/ng-bootstrap": "^5.3.0",
-    "@ng-select/ng-select": "^5.1.0",
+    "@ng-select/ng-select": "^6.1.0",
     "@stomp/ng2-stompjs": "^7.2.0",
-    "@swimlane/ngx-graph": "^7.1.2",
+    "@swimlane/ngx-graph": "^8.0.0-rc.1",
     "@types/angular": "^1.7.0",
     "ag-grid-angular": "^26.2.0",
     "ag-grid-community": "^26.2.0",
@@ -56,9 +56,9 @@
     "monaco-editor-core": "^0.30.1",
     "@codingame/monaco-languageclient": "^0.17.0",
     "nanoid": "^3.1.22",
-    "ngx-file-drop": "^10.1.1",
+    "ngx-file-drop": "^11.2.0",
     "ngx-highlightjs": "4.1.0",
-    "ngx-markdown": "^10.1.1",
+    "ngx-markdown": "^11.1.3",
     "ngx-moment": "^3.4.0",
     "npm": "^6.14.5",
     "path": "^0.12.7",
@@ -77,10 +77,10 @@
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "8.4.1",
-    "@angular-devkit/build-angular": "~0.1002.3",
-    "@angular/cli": "^10.2.3",
-    "@angular/compiler-cli": "^10.2.5",
-    "@angular/language-service": "^10.2.5",
+    "@angular-devkit/build-angular": "~0.1102.15",
+    "@angular/cli": "^11.2.15",
+    "@angular/compiler-cli": "^11.2.14",
+    "@angular/language-service": "^11.2.14",
     "@babel/core": "^7.7.7",
     "@codingame/monaco-jsonrpc": "^0.3.1",
     "@storybook/addon-actions": "^5.3.14",
@@ -89,19 +89,19 @@
     "@storybook/addons": "^5.3.14",
     "@storybook/angular": "^5.3.14",
     "@testing-library/cypress": "^7.0.6",
-    "@types/jasmine": "~2.8.6",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/react-select": "^3.0.10",
     "babel-loader": "^8.0.6",
-    "codelyzer": "^5.1.2",
+    "codelyzer": "^6.0.0",
     "cypress": "^8.2.0",
     "cypress-file-upload": "^5.0.8",
-    "jasmine-core": "~3.5.0",
+    "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~6.3.9",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
