--- a/vyne-query-service/src/main/web/angular.json
+++ b/vyne-query-service/src/main/web/angular.json
@@ -113,8 +113,7 @@
             "karmaConfig": "src/karma.conf.js",
             "styles": [
               {
-                "input": "src/styles.scss",
-                "inject": true
+                "input": "src/styles.scss"
               }
             ],
             "scripts": [],
