--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json",
-    "build": "ng build",
+    "build": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build",
     "start-dev": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng serve --configuration dev",
     "build-prod": "ng build --prod",
     "test": "ng test",
@@ -28,11 +28,11 @@
     "@angular/platform-browser-dynamic": "^10.2.5",
     "@angular/platform-server": "^10.2.5",
     "@angular/router": "^10.2.5",
+    "@codingame/monaco-languageclient": "^0.17.0",
     "@covalent/core": "^3.1.1",
     "@covalent/dynamic-forms": "^3.1.1",
     "@covalent/highlight": "^3.1.1",
     "@materia-ui/ngx-monaco-editor": "^5.1.0",
-    "@ng-bootstrap/ng-bootstrap": "^5.3.0",
     "@ng-select/ng-select": "^5.1.0",
     "@stomp/ng2-stompjs": "^7.2.0",
     "@swimlane/ngx-graph": "^7.1.2",
@@ -54,7 +54,6 @@
     "moment": "^2.24.0",
     "monaco-editor": "^0.30.1",
     "monaco-editor-core": "^0.30.1",
-    "@codingame/monaco-languageclient": "^0.17.0",
     "nanoid": "^3.1.22",
     "ngx-file-drop": "^10.1.1",
     "ngx-highlightjs": "4.1.0",
@@ -70,24 +69,31 @@
     "stream": "0.0.2",
     "tslib": "^2.0.0",
     "url-parse": "^1.4.4",
-    "vscode-jsonrpc": "^6.0.0",
     "vscode-json-languageservice": "^4.1.9",
+    "vscode-jsonrpc": "^6.0.0",
     "vscode-languageserver": "7.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "8.4.1",
+    "@angular-devkit/architect": "~0.1001.4",
     "@angular-devkit/build-angular": "~0.1002.3",
+    "@angular-devkit/core": "^10.2.3",
+    "@angular-eslint/builder": "1.2.0",
+    "@angular-eslint/eslint-plugin": "1.2.0",
+    "@angular-eslint/eslint-plugin-template": "1.2.0",
+    "@angular-eslint/schematics": "1.2.0",
+    "@angular-eslint/template-parser": "1.2.0",
     "@angular/cli": "^10.2.3",
     "@angular/compiler-cli": "^10.2.5",
     "@angular/language-service": "^10.2.5",
     "@babel/core": "^7.7.7",
     "@codingame/monaco-jsonrpc": "^0.3.1",
-    "@storybook/addon-actions": "^5.3.14",
-    "@storybook/addon-links": "^5.3.14",
-    "@storybook/addon-notes": "^5.3.14",
-    "@storybook/addons": "^5.3.14",
-    "@storybook/angular": "^5.3.14",
+    "@storybook/addon-actions": "^6.4.9",
+    "@storybook/addon-links": "^6.4.9",
+    "@storybook/addon-notes": "^5.3.21",
+    "@storybook/addons": "^6.4.9",
+    "@storybook/angular": "^6.4.9",
     "@testing-library/cypress": "^7.0.6",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
@@ -95,10 +101,16 @@
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/react-select": "^3.0.10",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "@typescript-eslint/parser": "4.3.0",
     "babel-loader": "^8.0.6",
-    "codelyzer": "^5.1.2",
     "cypress": "^8.2.0",
     "cypress-file-upload": "^5.0.8",
+    "eslint": "^7.6.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsdoc": "30.7.6",
+    "eslint-plugin-prefer-arrow": "1.2.2",
+    "eslint-plugin-storybook": "^0.5.3",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
@@ -106,12 +118,11 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "node-sass": "^6.0.1",
+    "node-sass": "^4.14.1",
     "protractor": "~7.0.0",
     "ts-node": "~5.0.1",
     "tslint": "~6.1.0",
     "typescript": "~4.0.8",
     "webpack-bundle-analyzer": "^3.8.0"
-  },
-  "peerDependencies": {}
+  }
 }
