trying to get sotryobook working, but failed

--- a/vyne-query-service/src/main/web/angular.json
+++ b/vyne-query-service/src/main/web/angular.json
@@ -79,8 +79,8 @@
               "extractLicenses": false,
               "statsJson": false,
               "progress": false,
-              "vendorChunk": true,
-              "buildOptimizer": false
+              "vendorChunk": false,
+              "buildOptimizer": true
             }
           }
         },
