--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -11,9 +11,10 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "automation": "cypress run --spec 'cypress/integration/ui-tests/**/*'",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "bundle-report": "webpack-bundle-analyzer dist/stats.json"
+    "storybook": "npm run docs:json && start-storybook -p 6006",
+    "build-storybook": "npm run docs:json && build-storybook",
+    "bundle-report": "webpack-bundle-analyzer dist/stats.json",
+    "docs:json": "compodoc -p ./tsconfig.json -e json -d ."
   },
   "private": true,
   "dependencies": {
@@ -66,6 +67,7 @@
     "react-dom": "^16.12.0",
     "rich-markdown-editor": "^9.11.2",
     "rxjs": "^6.5.0",
+    "sass": "^1.44.0",
     "stream": "0.0.2",
     "tslib": "^2.0.0",
     "url-parse": "^1.4.4",
@@ -86,13 +88,14 @@
     "@angular-eslint/template-parser": "1.2.0",
     "@angular/cli": "^10.2.3",
     "@angular/compiler-cli": "^10.2.5",
+    "@angular/elements": "^13.1.0",
     "@angular/language-service": "^10.2.5",
     "@babel/core": "^7.7.7",
     "@codingame/monaco-jsonrpc": "^0.3.1",
+    "@compodoc/compodoc": "^1.1.16",
     "@storybook/addon-actions": "^6.4.9",
+    "@storybook/addon-essentials": "^6.4.9",
     "@storybook/addon-links": "^6.4.9",
-    "@storybook/addon-notes": "^5.3.21",
-    "@storybook/addons": "^6.4.9",
     "@storybook/angular": "^6.4.9",
     "@testing-library/cypress": "^7.0.6",
     "@types/jasmine": "~2.8.6",
@@ -103,6 +106,7 @@
     "@types/react-select": "^3.0.10",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
+    "@webcomponents/custom-elements": "^1.5.0",
     "babel-loader": "^8.0.6",
     "cypress": "^8.2.0",
     "cypress-file-upload": "^5.0.8",
@@ -118,9 +122,9 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "node-sass": "^4.14.1",
     "protractor": "~7.0.0",
     "ts-node": "~5.0.1",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
     "tslint": "~6.1.0",
     "typescript": "~4.0.8",
     "webpack-bundle-analyzer": "^3.8.0"
