--- a/vyne-query-service/src/main/web/src/tsconfig.app.json
+++ b/vyne-query-service/src/main/web/src/tsconfig.app.json
@@ -7,6 +7,7 @@
   "exclude": [
     "src/test.ts",
     "**/*.spec.ts",
-    "**/*.stories.ts"
+    "**/*.stories.ts",
+    "**/*.stories.*"
   ]
 }
