--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -38,8 +38,8 @@
     "@stomp/ng2-stompjs": "^7.2.0",
     "@swimlane/ngx-graph": "^7.1.2",
     "@types/angular": "^1.7.0",
-    "ag-grid-angular": "^26.2.0",
-    "ag-grid-community": "^26.2.0",
+    "ag-grid-angular": "^25.3.0",
+    "ag-grid-community": "^25.3.0",
     "angular-oauth2-oidc": "^10.0.3",
     "angular-split": "^4.0.0",
     "b64-to-blob": "^1.2.19",
@@ -67,7 +67,6 @@
     "react-dom": "^16.12.0",
     "rich-markdown-editor": "^9.11.2",
     "rxjs": "^6.5.0",
-    "sass": "^1.44.0",
     "stream": "0.0.2",
     "tslib": "^2.0.0",
     "url-parse": "^1.4.4",
@@ -117,6 +116,7 @@
     "eslint-plugin-storybook": "^0.5.3",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
+    "node-sass": "4.14.1",
     "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
