upgraded to angular 12 not tested#

--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve --proxy-config proxy.conf.json",
     "build": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build",
     "start-dev": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng serve --configuration dev",
-    "build-prod": "ng build --prod",
+    "build-prod": "ng build --configuration production",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -18,17 +18,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.2.14",
+    "@angular/animations": "^12.2.14",
     "@angular/cdk": "^11.2.13",
-    "@angular/common": "^11.2.14",
-    "@angular/compiler": "^11.2.14",
-    "@angular/core": "^11.2.14",
-    "@angular/forms": "^11.2.14",
+    "@angular/common": "^12.2.14",
+    "@angular/compiler": "^12.2.14",
+    "@angular/core": "^12.2.14",
+    "@angular/forms": "^12.2.14",
     "@angular/material": "^11.2.13",
-    "@angular/platform-browser": "^11.2.14",
-    "@angular/platform-browser-dynamic": "^11.2.14",
-    "@angular/platform-server": "^11.2.14",
-    "@angular/router": "^11.2.14",
+    "@angular/platform-browser": "^12.2.14",
+    "@angular/platform-browser-dynamic": "^12.2.14",
+    "@angular/platform-server": "^12.2.14",
+    "@angular/router": "^12.2.14",
     "@codingame/monaco-languageclient": "^0.17.0",
     "@covalent/core": "^3.1.1",
     "@covalent/dynamic-forms": "^3.1.1",
@@ -73,22 +73,22 @@
     "vscode-json-languageservice": "^4.1.9",
     "vscode-jsonrpc": "^6.0.0",
     "vscode-languageserver": "7.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "8.4.1",
-    "@angular-devkit/architect": "~0.1102.15",
-    "@angular-devkit/build-angular": "~0.1102.15",
-    "@angular-devkit/core": "^11.2.15",
+    "@angular-devkit/architect": "~0.1202.14",
+    "@angular-devkit/build-angular": "~12.2.14",
+    "@angular-devkit/core": "^12.2.14",
     "@angular-eslint/builder": "1.2.0",
     "@angular-eslint/eslint-plugin": "1.2.0",
     "@angular-eslint/eslint-plugin-template": "1.2.0",
     "@angular-eslint/schematics": "1.2.0",
     "@angular-eslint/template-parser": "1.2.0",
-    "@angular/cli": "^11.2.15",
-    "@angular/compiler-cli": "^11.2.14",
+    "@angular/cli": "^12.2.14",
+    "@angular/compiler-cli": "^12.2.14",
     "@angular/elements": "^13.1.0",
-    "@angular/language-service": "^11.2.14",
+    "@angular/language-service": "^12.2.14",
     "@babel/core": "^7.7.7",
     "@codingame/monaco-jsonrpc": "^0.3.1",
     "@compodoc/compodoc": "^1.1.16",
@@ -126,7 +126,7 @@
     "ts-node": "~5.0.1",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.8",
+    "typescript": "~4.3.5",
     "webpack-bundle-analyzer": "^3.8.0"
   }
 }
