building and app running with angular 12

--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -34,12 +34,12 @@
     "@covalent/dynamic-forms": "^3.1.1",
     "@covalent/highlight": "^3.1.1",
     "@materia-ui/ngx-monaco-editor": "^5.1.0",
-    "@ng-select/ng-select": "^5.1.0",
+    "@ng-select/ng-select": "^7.4.0",
     "@stomp/ng2-stompjs": "^7.2.0",
     "@swimlane/ngx-graph": "^7.1.2",
     "@types/angular": "^1.7.0",
-    "ag-grid-angular": "^25.3.0",
-    "ag-grid-community": "^25.3.0",
+    "ag-grid-angular": "^26.2.0",
+    "ag-grid-community": "^26.2.0",
     "angular-oauth2-oidc": "^10.0.3",
     "angular-split": "^4.0.0",
     "b64-to-blob": "^1.2.19",
@@ -56,9 +56,9 @@
     "monaco-editor": "^0.30.1",
     "monaco-editor-core": "^0.30.1",
     "nanoid": "^3.1.22",
-    "ngx-file-drop": "^10.1.1",
-    "ngx-highlightjs": "4.1.0",
-    "ngx-markdown": "^10.1.1",
+    "ngx-file-drop": "^12.0.0",
+    "ngx-highlightjs": "^5.0.0",
+    "ngx-markdown": "^12.0.1",
     "ngx-moment": "^3.4.0",
     "npm": "^6.14.5",
     "path": "^0.12.7",
@@ -116,7 +116,6 @@
     "eslint-plugin-storybook": "^0.5.3",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "node-sass": "4.14.1",
     "karma": "~6.3.9",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
