--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@angular/animations": "^12.2.14",
     "@angular/cdk": "^12.2.13",
+    "@angular/cdk-experimental": "^12.2.13",
     "@angular/common": "^12.2.14",
     "@angular/compiler": "^12.2.14",
     "@angular/core": "^12.2.14",
