Rest controller for managing user to role mappings

--- a/vyne-query-service/src/main/resources/authorisation/vyne-authorisation-role-definitions.conf
+++ b/vyne-query-service/src/main/resources/authorisation/vyne-authorisation-role-definitions.conf
@@ -41,9 +41,7 @@ grantedAuthorityMappings {
                               "ViewAuthenticationTokens",
                               "EditAuthenticationTokens",
                               "ViewConnections",
-                              "EditConnections",
-                              "ViewUsers",
-                              "EditUsers"
+                              "EditConnections"
                               ]
    }
 }
