fix(build): fix ng serve (broken with move to angular 12)

--- a/vyne-query-service/src/main/web/angular.json
+++ b/vyne-query-service/src/main/web/angular.json
@@ -105,7 +105,7 @@
               "browserTarget": "vyne-app:build:production"
             },
             "dev": {
-              "browserTarget": "vyne-app:build:dev"
+              "browserTarget": "vyne-app:build:dev",
             }
           }
         },
