--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -84,7 +84,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "8.4.1",
+    "@angular-builders/custom-webpack": "^12.1.3",
     "@angular-devkit/architect": "~0.1202.14",
     "@angular-devkit/build-angular": "~12.2.14",
     "@angular-devkit/core": "^12.2.14",
