Refactored user name lookup and client side changes

--- a/vyne-query-service/src/main/web/angular.json
+++ b/vyne-query-service/src/main/web/angular.json
@@ -26,6 +26,7 @@
               "path": "./custom-webpack.config.js"
             },
             "assets": [
+              "src/silent-refresh.html",
               "src/icon-48x48.png",
               "src/assets",
               {
