--- a/jwt-auth-server/pom.xml
+++ b/jwt-auth-server/pom.xml
@@ -35,10 +35,11 @@
          <artifactId>spring-boot-starter-data-jpa</artifactId>
       </dependency>
 
+      <!-- Current embedded keycloack version is not compatible with H2 2.x -->
       <dependency>
          <groupId>com.h2database</groupId>
          <artifactId>h2</artifactId>
-         <scope>runtime</scope>
+         <version>1.4.200</version>
       </dependency>
 
       <!-- Keycloak server -->
