Remove @EmbeddedKafka kafka and use Kafka test container in unit tests

--- a/cask/pom.xml
+++ b/cask/pom.xml
@@ -224,6 +224,12 @@
           <artifactId>junit-jupiter</artifactId>
           <scope>test</scope>
        </dependency>
+
+       <dependency>
+          <groupId>org.testcontainers</groupId>
+          <artifactId>kafka</artifactId>
+          <scope>test</scope>
+       </dependency>
     </dependencies>
 
     <build>
