--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -22,6 +22,11 @@
       </dependency>
       <dependency>
          <groupId>io.vyne</groupId>
+         <artifactId>protobuf-utils</artifactId>
+         <version>${project.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>io.vyne</groupId>
          <artifactId>schema-server-api</artifactId>
          <version>${project.version}</version>
       </dependency>
