Secure and unsecure vyne http clients

--- a/jwt-auth-server/pom.xml
+++ b/jwt-auth-server/pom.xml
@@ -72,6 +72,12 @@
          </exclusions>
       </dependency>
 
+      <dependency>
+         <groupId>org.keycloak</groupId>
+         <artifactId>keycloak-model-jpa</artifactId>
+         <version>${keycloak.version}</version>
+      </dependency>
+
    </dependencies>
 
    <build>
