--- a/vyne-query-service/src/main/resources/authorisation/vyne-authorisation-role-definitions.conf
+++ b/vyne-query-service/src/main/resources/authorisation/vyne-authorisation-role-definitions.conf
@@ -1,3 +1,11 @@
+defaultUserRoleMappings {
+  roles = [ "Viewer" ]
+}
+
+defaultApiClientRoleMappings {
+  roles = [ "QueryRunner" ]
+}
+
 grantedAuthorityMappings {
    Admin {
       grantedAuthorities = [  "RunQuery",
